1: Ready for deploy

--- a/pages/blog-page.html
+++ b/pages/blog-page.html
@@ -2,32 +2,60 @@
 <html lang="en">
 
 <head>
-  
-  <title>GreenHKMarket - Organic and Sustainable Products in the UK</title>
+  <title>Blog - Organic and Sustainable Products in the UK</title>
+  <!-- Set the character encoding to UTF-8 -->
   <meta charset="UTF-8">
+
+  <!-- Set the viewport to ensure proper rendering on different devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="GreenHKMarket - Organic and Sustainable Products in the UK">
-  <meta name="keywords" content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
+
+  <!-- Define the page description for search engine optimization (SEO) -->
+  <meta name="description" content="GreenHKMarket - Explore a wide range of organic and sustainable products in the UK">
+
+  <!-- Specify the keywords related to the website for SEO purposes -->
+  <meta name="keywords"
+    content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
+
+  <!-- Set the favicon for the website -->
   <link rel="icon" href="../assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
+
+  <!-- Preconnect to Google Fonts for better performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap" rel="stylesheet">
+
+  <!-- Import and apply Google Fonts for the website -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap"
+    rel="stylesheet">
+
+  <!-- Include Bootstrap CSS framework for styling -->
   <link href="../assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Include SweetAlert2 CSS for customized alerts -->
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
+
+  <!-- Include custom CSS styles for the website -->
   <link href="../assets/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
+
+  <!-- Include Font Awesome CSS for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
 </head>
 <body>
-  <!-- Loader -->
+  <!-- Loader start -->
   <div id="loader-wrapper">
     <div id="loader">
       <img src="../assets/images/theme-logo/logo.png" alt="GreenHKMarket Logo">
       <div class="loader-text">Loading...</div>
     </div>
   </div>
+  <!-- Loader end -->
   <main>
+    <!-- Page wrapper start -->
     <div class="page-wrapper">
+      <!-- Header start -->
       <header>
+        <!-- Navbar start -->
         <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -89,9 +117,11 @@
             </div>
           </div>
         </nav>
+        <!-- Navbar end -->
       </header>
+      <!-- Header end -->
 
-      <!-- Heading container -->
+      <!-- Heading container start-->
       <div class="container-fluid heading-container">
         <div class="image-overlay">
           <img src="../assets/images/others/heading-image.png" class="img-fluid" alt="heading-img">
@@ -111,9 +141,12 @@
             </div>
         </div>
       </div>
+      <!-- Heading container end-->
 
+      <!-- Blog main container start -->
       <div class="container-fluid blog-container">
         <div class="row">
+          <!-- First col start -->
             <div class="col-12 col-md-7 col-lg-7">
                 <div class="row">
                     <div class="col-12 col-md-12 col-lg-12">
@@ -263,6 +296,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Pagination start -->
                 <div class="row pagination-row">
                     <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-around">
                         <nav aria-label="blog navigation">
@@ -284,8 +318,11 @@
                           </nav>
                     </div>
                 </div>
+                <!-- Pagination end -->
             </div>
+          <!-- First col end -->
 
+          <!-- Second col start -->
             <div class="col-12 col-md-3 col-lg-3 social-media-col">
                 <div class="social-media-item">
                     <h4><i class="fa fa-arrow-right"></i> &nbsp;Never Miss News</h4>
@@ -297,8 +334,12 @@
                     </ul>
                 </div>
             </div>
+          <!-- Second col end -->
         </div>
       </div>
+      <!-- Blog main container end -->
+
+      <!-- Footer start -->
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
@@ -310,11 +351,11 @@
           </div>
 
           <div class="row information-row">
-            <div class="col-12 col-md-3 col-lg-3 company-col">
+            <div class="col-12 col-md-6 col-lg-3 company-col">
               <img src="../assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
               <p>Green HK Market is a leading online platform dedicated to serving environmentally-conscious consumers in the UK. With a passion for promoting sustainable living, we strive to offer a diverse range of high-quality organic and sustainable products.</p>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 links-col">
+            <div class="col-12 col-md-6 col-lg-3 links-col">
               <h5>Links</h5>
               <hr>
               <ul class="list-group">
@@ -325,7 +366,7 @@
                 <li class="list-group-item"><a href="contact-page.html">Contact us</a></li>
               </ul>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 contact-col">
+            <div class="col-12 col-md-6 col-lg-3 contact-col">
               <h5>Contact information</h5>
               <hr>
               <table class="table">
@@ -343,7 +384,7 @@
                 </tr>
               </table>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 newsletter-col">
+            <div class="col-12 col-md-6 col-lg-3 newsletter-col">
               <h5>Newsletter</h5>
               <hr>
               <div class="row">
@@ -388,13 +429,20 @@
           </div>
         </div>
       </footer>
+      <!-- Footer end -->
     </div>
+    <!-- Page wrapper end -->
   </main>
-  <script src="../assets/javascript/jquery-3.7.0.min.js"></script>
-  <script src="../assets/javascript/bootstrap/bootstrap.bundle.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
-  <script src="../assets/javascript/main.js"></script>
+ <!-- Include jQuery library -->
+ <script src="../assets/javascript/jquery-3.7.0.min.js"></script>
+ <!-- Include bootstrap bundle library -->
+ <script src="../assets/javascript/bootstrap/bootstrap.bundle.js"></script>
+ <!-- Include jquery validation library -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+ <!-- Include sweet alert js library -->
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
+ <!-- Include main js for website -->
+ <script src="../assets/javascript/main.js"></script>
 </body>
 
 </html>
