--- a/pages/cart-page.html
+++ b/pages/cart-page.html
@@ -2,31 +2,59 @@
 <html lang="en">
 
 <head>
-  
-  <title>GreenHKMarket - Organic and Sustainable Products in the UK</title>
+  <title>Cart - Organic and Sustainable Products in the UK</title>
+  <!-- Set the character encoding to UTF-8 -->
   <meta charset="UTF-8">
+
+  <!-- Set the viewport to ensure proper rendering on different devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="GreenHKMarket - Organic and Sustainable Products in the UK">
-  <meta name="keywords" content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
+
+  <!-- Define the page description for search engine optimization (SEO) -->
+  <meta name="description" content="GreenHKMarket - Explore a wide range of organic and sustainable products in the UK">
+
+  <!-- Specify the keywords related to the website for SEO purposes -->
+  <meta name="keywords"
+    content="greenHKMarket, organic products, sustainable products, UK, eco-friendly, green lifestyle">
+
+  <!-- Set the favicon for the website -->
   <link rel="icon" href="../assets/images/theme-logo/favicon/favicon-32x32.png" type="image/x-icon">
+
+  <!-- Preconnect to Google Fonts for better performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap" rel="stylesheet">
+
+  <!-- Import and apply Google Fonts for the website -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Belanosima&family=Roboto+Slab&family=Satisfy&family=Ubuntu&family=Work+Sans&display=swap"
+    rel="stylesheet">
+
+  <!-- Include Bootstrap CSS framework for styling -->
   <link href="../assets/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Include SweetAlert2 CSS for customized alerts -->
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet">
+
+  <!-- Include custom CSS styles for the website -->
   <link href="../assets/css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"  />
+
+  <!-- Include Font Awesome CSS for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
+
 <body>
-  <!-- Loader -->
+  <!-- Loader start-->
   <div id="loader-wrapper">
     <div id="loader">
       <img src="../assets/images/theme-logo/logo.png" alt="GreenHKMarket Logo">
       <div class="loader-text">Loading...</div>
     </div>
   </div>
+  <!-- Loader end-->
+
   <main>
+    <!-- Page wrapper start -->
     <div class="page-wrapper">
+      <!-- Header start -->
       <header>
         <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
@@ -34,8 +62,8 @@
               <img src="../assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
             </a>
             <div class="navbar-toggler" onclick="navbarToggle(this)" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+              aria-label="Toggle navigation">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
@@ -78,9 +106,11 @@
                     <option value="Sustainable Fashion">Sustainable Fashion</option>
                     <option value="Health and Wellness">Health and Wellness</option>
                   </select>
-                  <input type="text" class="form-control search-input" aria-label="Text input with category select" placeholder="Search products">
-                  <a href="javascript:void(0)" class="btn btn-outline-secondary" type="button" id="search-button"><i class="fa fa-search"></i></a>
-                </div>                
+                  <input type="text" class="form-control search-input" aria-label="Text input with category select"
+                    placeholder="Search products">
+                  <a href="javascript:void(0)" class="btn btn-outline-secondary" type="button" id="search-button"><i
+                      class="fa fa-search"></i></a>
+                </div>
               </form>
               <div class="d-flex icon-container mb-2 mb-lg-0 justify-content-end align-items-center">
                 <a href="register.html"><i class="fa fa-user"></i> Account</a>
@@ -90,97 +120,113 @@
           </div>
         </nav>
       </header>
-        <div class="container-fluid cart-container">
-          <div class="row">
-            <div class="col-12 col-md-8 col-lg-8 cart-table-col">
-                <div class="table-responsive">
-                  <table class="table text-center" >
-                    <thead>
-                      <tr>
-                        <th scope="col">Remove</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">QTY</th>
-                        <th scope="col">Total price</th>
-                      </tr>
-                    </thead>
-                    <tbody class="w-100">
-                      <tr>
-                        <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
-                        <td><a href="product-page.html"><img src="../assets/images/product-images/10.webp" class="img-fluid product-img" alt="Product image"></a></td>
-                        <td><a href="product-page.html" class="product-title-link">Together Health Vegan Vitamin D3 food supplement 30 caps</a></td>
-                        <td>£5.59</td>
-                        <td><input type="number" class="form-control" min="1" max="10" value="1"></td>
-                        <td>£5.59</td>
-                      </tr>
-                      <tr>
-                        <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
-                        <td><a href="product-page.html"><img src="../assets/images/product-images/1.png" class="img-fluid product-img" alt="Product image"></a></td>
-                        <td><a href="product-page.html" class="product-title-link">Vegetables Juices</a></td>
-                        <td>£2</td>
-                        <td><input type="number" class="form-control" min="1" max="10" value="2"></td>
-                        <td>£4</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <div class="update-btn-col">
-                  <a href="javascript:void(0)" class="btn btn-primary">Update cart</a>
-                </div>
+      <!-- Header end -->
+      <!-- Main cart container start -->
+      <div class="container-fluid cart-container">
+        <!-- First row start -->
+        <div class="row">
+          <!-- First col start -->
+          <div class="col-12 col-md-8 col-lg-8 cart-table-col">
+            <div class="table-responsive">
+              <table class="table text-center">
+                <thead>
+                  <tr>
+                    <th scope="col">Remove</th>
+                    <th scope="col">Image</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">QTY</th>
+                    <th scope="col">Total price</th>
+                  </tr>
+                </thead>
+                <tbody class="w-100">
+                  <tr>
+                    <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
+                    <td><a href="product-page.html"><img src="../assets/images/product-images/10.webp"
+                          class="img-fluid product-img" alt="Product image"></a></td>
+                    <td><a href="product-page.html" class="product-title-link">Together Health Vegan Vitamin D3 food
+                        supplement 30 caps</a></td>
+                    <td>£5.59</td>
+                    <td><input type="number" class="form-control" min="1" max="10" value="1"></td>
+                    <td>£5.59</td>
+                  </tr>
+                  <tr>
+                    <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
+                    <td><a href="product-page.html"><img src="../assets/images/product-images/1.png"
+                          class="img-fluid product-img" alt="Product image"></a></td>
+                    <td><a href="product-page.html" class="product-title-link">Vegetables Juices</a></td>
+                    <td>£2</td>
+                    <td><input type="number" class="form-control" min="1" max="10" value="2"></td>
+                    <td>£4</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="col-12 col-md-4 col-lg-4 total-col">
-              <h3>Cart totals</h3>
-              <div class="total-content">
-                  <ul class="list-group">
-                      <li class="list-group-item d-flex">
-                          <div class="product-name">
-                            Cart Subtotal
-                          </div>
-                          <div class="product-price">
-                              £9.54
-                          </div>
-                      </li>
-                      <li class="list-group-item d-flex">
-                          <div class="product-name">
-                            Shipping and Handing
-                          </div>
-                          <div class="product-price">
-                              £2.06
-                          </div>
-                      </li>
-                      <li class="list-group-item d-flex" id="orderTotal">
-                          <div class="product-name">
-                              Order total
-                          </div>
-                          <div class="product-price">
-                              £12.00
-                          </div>
-                      </li>
-                  </ul>
-              </div>
-              <div class="form-button">
-                  <a href="checkout-page.html" class="btn btn-primary" id="checkoutBtn">Checkout <i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
-              </div>
+            <div class="update-btn-col">
+              <a href="javascript:void(0)" class="btn btn-primary">Update cart</a>
             </div>
           </div>
+          <!-- First col end -->
+          <!-- Second col start -->
+          <div class="col-12 col-md-4 col-lg-4 total-col">
+            <h3>Cart totals</h3>
+            <div class="total-content">
+              <ul class="list-group">
+                <li class="list-group-item d-flex">
+                  <div class="product-name">
+                    Cart Subtotal
+                  </div>
+                  <div class="product-price">
+                    £9.54
+                  </div>
+                </li>
+                <li class="list-group-item d-flex">
+                  <div class="product-name">
+                    Shipping and Handing
+                  </div>
+                  <div class="product-price">
+                    £2.06
+                  </div>
+                </li>
+                <li class="list-group-item d-flex" id="orderTotal">
+                  <div class="product-name">
+                    Order total
+                  </div>
+                  <div class="product-price">
+                    £12.00
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="form-button">
+              <a href="checkout-page.html" class="btn btn-primary" id="checkoutBtn">Checkout <i
+                  class="fa-sharp fa-solid fa-cart-shopping"></i></a>
+            </div>
+          </div>
+          <!-- Second col end -->
         </div>
+        <!-- First row end -->
+      </div>
+      <!-- Main cart container end -->
+      <!-- Footer start -->
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
-              <a href="javascript:void(0)" id="goToTop">
-                <div class="col-12 col-md-12 col-lg-12">
-                  Back to top
-                </div>
-               </a>
+            <a href="javascript:void(0)" id="goToTop">
+              <div class="col-12 col-md-12 col-lg-12">
+                Back to top
+              </div>
+            </a>
           </div>
 
           <div class="row information-row">
-            <div class="col-12 col-md-3 col-lg-3 company-col">
+            <div class="col-12 col-md-6 col-lg-3 company-col">
               <img src="../assets/images/theme-logo/logo.png" class="img-fluid" alt="GreenHKMarket Logo">
-              <p>Green HK Market is a leading online platform dedicated to serving environmentally-conscious consumers in the UK. With a passion for promoting sustainable living, we strive to offer a diverse range of high-quality organic and sustainable products.</p>
+              <p>Green HK Market is a leading online platform dedicated to serving environmentally-conscious consumers
+                in the UK. With a passion for promoting sustainable living, we strive to offer a diverse range of
+                high-quality organic and sustainable products.</p>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 links-col">
+            <div class="col-12 col-md-4 col-lg-3 links-col">
               <h5>Links</h5>
               <hr>
               <ul class="list-group">
@@ -191,25 +237,33 @@
                 <li class="list-group-item"><a href="contact-page.html">Contact us</a></li>
               </ul>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 contact-col">
+            <div class="col-12 col-md-6 col-lg-3 contact-col">
               <h5>Contact information</h5>
               <hr>
               <table class="table">
                 <tr>
-                  <td><p><span><i class="fa-solid fa-map-location"></i></span> Address:</p></td>
-                  <td><Address>Conduit Lane, Oldbury <br> WV16 5BU Shropshire</Address></td>
+                  <td>
+                    <p><span><i class="fa-solid fa-map-location"></i></span> Address:</p>
+                  </td>
+                  <td>
+                    <Address>Conduit Lane, Oldbury <br> WV16 5BU Shropshire</Address>
+                  </td>
                 </tr>
                 <tr>
-                  <td><p><span><i class="fa-solid fa-envelope"></i></span> Email:</p></td>
+                  <td>
+                    <p><span><i class="fa-solid fa-envelope"></i></span> Email:</p>
+                  </td>
                   <td><a href="mailto:greenhkmart@gmail.com">greenhkmart@gmail.com</a></td>
                 </tr>
                 <tr>
-                  <td><p><span><i class="fa-solid fa-phone"></i> Phone:</p></td>
+                  <td>
+                    <p><span><i class="fa-solid fa-phone"></i> Phone:</p>
+                  </td>
                   <td><a href="tel:+447388810280">+44 7388 810280</a></td>
                 </tr>
               </table>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 newsletter-col">
+            <div class="col-12 col-md-6 col-lg-3 newsletter-col">
               <h5>Newsletter</h5>
               <hr>
               <div class="row">
@@ -217,21 +271,27 @@
                 <div class="col-12 col-md-12">
                   <form action="javascript:void(0)" method="#" autocomplete="off">
                     <div class="input-group mb-3">
-                      <input type="text" class="form-control" placeholder="Email address" aria-label="Email addres" aria-describedby="news-letter-input">
-                      <a href="javascript:void(0)" class="btn btn-primary" id="news-letter-input"><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                      <input type="text" class="form-control" placeholder="Email address" aria-label="Email addres"
+                        aria-describedby="news-letter-input">
+                      <a href="javascript:void(0)" class="btn btn-primary" id="news-letter-input"><i
+                          class="fa fa-long-arrow-right" aria-hidden="true"></i>
                       </a>
-                    </div>      
+                    </div>
                   </form>
                 </div>
               </div>
-              
+
               <div class="row social-media-row">
                 <div class="col-12 col-md-12">
                   <ul class="list-group list-group-horizontal">
-                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-facebook"></i></a></li>
-                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-instagram"></i></a></li>
-                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-youtube"></i></a></li>
-                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-twitter"></i></a></li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-facebook"></i></a>
+                    </li>
+                    <li class="group-item"><a href="javascript:void(0)"><i
+                          class="fa-brands fa-square-instagram"></i></a></li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-youtube"></i></a>
+                    </li>
+                    <li class="group-item"><a href="javascript:void(0)"><i class="fa-brands fa-square-twitter"></i></a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -254,12 +314,19 @@
           </div>
         </div>
       </footer>
+      <!-- Footer end -->
     </div>
+    <!-- Page wrapper end -->
   </main>
+  <!-- Include jQuery library -->
   <script src="../assets/javascript/jquery-3.7.0.min.js"></script>
+  <!-- Include bootstrap bundle library -->
   <script src="../assets/javascript/bootstrap/bootstrap.bundle.js"></script>
+  <!-- Include jquery validation library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+  <!-- Include sweet alert js library -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
+  <!-- Include main js for website -->
   <script src="../assets/javascript/main.js"></script>
 </body>
 
